# MCP-Servers

./: .gitignore  README.md  client1.py  pyproject.toml  requirements.txt  streamlit_app.py  streamlit_app.py.bak
server/: math_server.py
